runit 0.9.0
Thu, 24 Apr 2003 13:11:50 +0200
  * runsvdir.c: don't propagate sig_term to runsv processes when receiving
    sig_term; send sig_term to all runsv processes and exit 111 when
    receiving sig_hangup.
  * svlogd.c: code cleanup.
  * svwaitdown.c: send command "d" (and "x" if -x is set) to a service if
    it's not in state 'want down'.
  * svwaitup.c: minor code cleanup.
  * man/runsvdir.8, man/svwaitdown.8: adapt.

runit 0.8.4
Sun, 20 Apr 2003 19:31:24 +0200
  * svlogd.c: new; runit's service logging daemon.
  * fmt_ptime.h, fmt_ptime.c, pmatch.h, pmatch.c: new.
  * man/svlogd.8, doc/svlogd.8.html: new.
  * man/runsv.8, man/runsvstat.8, man/utmpset.8: minor cleanup.

runit 0.8.1
Wed, 12 Mar 2003 15:10:04 +0100
  * runsvdir.c, runsv.c: close-on-exec file descriptors of current dir and
    lock files (thx Lukas Beeler).
  * doc/runscripts.html: add contributed run scripts (thx Robin S. Socha, 
    Claus Alboege, Paul Jarc, clemens fischer, Jesse Cablek).

runit 0.8.0
Tue, 25 Feb 2003 16:17:34 +0100
  * doc/benefits.html: new.
  * doc/index.html, doc/upgrade.html: adapt.
  * etc/*/1, etc/*/3, etc/*/ctrlaltdel: set permissions on the magic files
    instead of creating and removing them (can make them symbolic links
    now); set PATH.
  * runit.h: new; centralize runit's compiled in magic file names.
  * runit.c: check permissions of magic files instead of sole existence;
    conditionally call reboot(RB_AUTOBOOT), reboot(RB_POWER_OFF),
    reboot(RB_HALT_SYSTEM) if possible; code cleanup.
  * runit-init.c: set permissions on magic files instead of creating or
    removing them; code cleanup.
  * runsvdir.c: detect and tolerate system time warp; code cleanup.
  * runsv.c, runsvchdir.c, runsvctrl.c, runsvstat.c, svwaitdown.c,
    svwaitup.c, utmpset.c: code cleanup.
  * man/runit.8, man/runit-init.8: adapt.

runit 0.7.2
Fri, 10 Jan 2003 21:34:13 +0100
  * runsv.c: close finish script file descriptor.